# openclaw-graphknows

./: .gitignore  README.md  index.js  install.sh  openclaw.plugin.json  package.json  pyproject.toml
lib/: cli.js  compiler.js  config.js  files.js  graph.js  lint.js  markdown.js  query.js  schema.js
scripts/: run-lint.js  smoke-test.js
src/obsidian_graph_memory/: __init__.py  __main__.py  cli.py  config.py  context.py  extractor.py  knowledge_graph.py  linker.py  palace.py  retriever.py  server.py  vault.py  vector_store.py  wal.py
